Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34125

Windows: Empty audio source: "Unsupported url scheme!" warning

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.2.0
    • 5.2.0 Alpha
    • Multimedia
    • None
    • Windows
    • d7dd22b9955ffde6d3c663655d9f9d4a58ca3894

      If you want to clear data and set empty string for source to SoundEffect or MediaPlayer then you get warning "Unsupported url scheme!" on Windows.

      There is no warning on Linux.

      Please fix function SourceResolver::load() in 'qtmultimedia/src/plugins/wmf/sourceresolver.cpp' by checking url for empty string.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ylopes Yoann Lopes
            nodir.temir Nodir Temirkhodjaev
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes